[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haiku"
version = "0.1.0"
description = "A tiny poem about your last git diff."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0",
    "click>=8.1",
]

[project.scripts]
haiku = "haiku.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["haiku"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "BLE"]

[tool.pytest.ini_options]
testpaths = ["tests"]